<resources>
    <string name="app_name">Profile_1718061</string>
    <string name="informatics">Informatics Engineering ITN Malang 17</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="post">POST</string>
    <string name="qotd">Quotes Of The Day :</string>
    <string name="describe">Keep clean, because cleanliness is part of faith</string>
    <string name="follow">FOLLOW</string>
</resources>