<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/transparan"
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:background="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/kronologi"
                android:layout_width="match_parent"
                android:layout_height="217dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="-1dp"
                android:layout_marginEnd="-5dp"
                android:src="@drawable/opocity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="88dp"
                android:layout_marginBottom="130dp"
                android:text="Moch. Ibnu Abbas Al"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="160dp"
                android:layout_marginBottom="99dp"
                android:text="TUBAN"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="71dp"
                android:text="@string/informatics"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!--            <ImageView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_alignParentStart="true"-->
            <!--                android:layout_alignParentTop="true"-->
            <!--                android:layout_marginStart="55dp"-->
            <!--                android:layout_marginTop="80dp"-->
            <!--                android:src="@drawable/ic_edit_white_24dp" />-->

            <!--            <ImageView-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_alignParentStart="true"-->
            <!--                android:layout_alignParentBottom="true"-->
            <!--                android:layout_marginStart="130dp"-->
            <!--                android:layout_marginBottom="71dp"-->
            <!--                android:src="@drawable/ic_location_on_white_24dp" />-->

        </RelativeLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile"
            android:layout_width="110sp"
            android:layout_height="110sp"
            android:layout_marginTop="164dp"
            android:src="@drawable/profile"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/transparan"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/Wadah"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile" />

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="288dp"
            android:text="@string/following"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/value_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="5"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/following"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/following"
            app:layout_constraintTop_toBottomOf="@id/following" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="288dp"
            android:text="@string/followers"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/following"
            app:layout_constraintHorizontal_bias="0.321"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/value_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="1500"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/followers"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/followers"
            app:layout_constraintTop_toBottomOf="@id/followers" />

        <View
            android:id="@+id/garis"
            android:layout_width="2dp"
            android:layout_height="80dp"
            android:background="@color/colorGaris"
            app:layout_constraintEnd_toEndOf="@+id/Wadah"
            app:layout_constraintHorizontal_bias="0.325"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile" />

        <View
            android:id="@+id/garis1"
            android:layout_width="2dp"
            android:layout_height="80dp"
            android:background="@color/colorGaris"
            app:layout_constraintEnd_toEndOf="@+id/Wadah"
            app:layout_constraintHorizontal_bias="0.687"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile" />

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="288dp"
            android:text="@string/post"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.656"
            app:layout_constraintStart_toEndOf="@+id/following"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/value_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="9"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/post"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="@+id/post"
            app:layout_constraintTop_toBottomOf="@id/post" />

        <RelativeLayout
            android:id="@+id/wadah1"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/opocity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Wadah">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="19dp"
                android:layout_marginTop="19dp"
                android:text="@string/qotd"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="66dp"
                android:text="@string/describe"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

            <ImageButton
                android:layout_width="141dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="139dp"
                android:layout_marginTop="243dp"
                android:src="@drawable/button"
                tools:layout_editor_absoluteX="270dp">

            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="257dp"
                android:layout_marginEnd="173dp"
                android:text="@string/follow"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>